--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,97 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:fitsSystemWindows="true">
 
-    <RelativeLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/appbar_height"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <ImageView
-            android:id="@+id/image_poster"
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="256dp"
-            android:layout_marginBottom="16dp"
-            android:contentDescription="@string/image_poster_desc"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_height="match_parent"
+            app:contentScrim="@color/colorPrimary"
+            app:titleEnabled="false"
+            app:expandedTitleGravity="bottom|left"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-        <ImageView
-            android:id="@+id/image_favorite"
-            android:src="@drawable/ic_love_empty"
-            android:layout_below="@id/image_poster"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="16dp"
-            android:padding="8dp"
-            android:layout_width="48dp"
-            android:layout_height="48dp" />
+            <FrameLayout
+                android:layout_width="match_parent"
+                app:layout_collapseMode="parallax"
+                android:layout_height="256dp"
+                android:fitsSystemWindows="true">
 
-        <TextView
-            android:id="@+id/text_title"
-            android:layout_width="match_parent"
-            android:layout_toLeftOf="@id/image_favorite"
-            android:layout_height="48dp"
-            android:fontFamily="sans-serif-condensed"
-            android:gravity="center_vertical"
-            android:layout_below="@id/image_poster"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:text="@string/text_title_sample"
-            android:textSize="21sp"
-            android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/image_poster"
+                    android:layout_width="match_parent"
+                    android:layout_height="256dp"
+                    android:layout_marginBottom="16dp"
+                    android:contentDescription="@string/image_poster_desc"
+                    android:src="@mipmap/ic_launcher" />
 
-        <TextView
-            android:id="@+id/text_release_date"
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:layout_below="@id/text_title"
-            android:layout_marginLeft="16dp"
-            android:gravity="center"
-            android:text="@string/text_release_sample" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/background_scrim" />
 
-        <ImageView
-            android:id="@+id/image_rating"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/text_title"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="16dp"
-            android:contentDescription="@string/image_rate_desc"
-            android:src="@drawable/ic_star" />
+                <ImageView
+                    android:id="@+id/image_rating"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="right|bottom"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="16dp"
+                    android:contentDescription="@string/image_rate_desc"
+                    android:src="@drawable/ic_star" />
 
-        <TextView
-            android:id="@+id/text_rate"
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:layout_below="@id/text_title"
-            android:layout_toLeftOf="@id/image_rating"
-            android:gravity="center"
-            android:text="@string/text_rate_sample" />
+                <TextView
+                    android:id="@+id/text_rate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:textColor="@android:color/white"
+                    android:layout_gravity="right|bottom"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginRight="44dp"
+                    android:gravity="center"
+                    android:text="@string/text_rate_sample" />
+            </FrameLayout>
 
-        <TextView
-            android:id="@+id/text_synopsis"
-            android:fontFamily="sans-serif-light"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text_release_date"
-            android:layout_margin="16dp"
-            android:text="@string/text_synopsis_sample" />
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin">
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="21sp"
+                    android:fontFamily="sans-serif-condensed" />
+            </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_trailers"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text_synopsis" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_reviews"
-            android:layout_marginTop="8dp"
-            android:layout_below="@id/recycler_trailers"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </RelativeLayout>
-</android.support.v4.widget.NestedScrollView>
+    <include layout="@layout/content_movie_detail" />
+</android.support.design.widget.CoordinatorLayout>
