--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="item_spacing">4dp</dimen>
+    <dimen name="appbar_height">256dp</dimen>
+    <dimen name="margin_vertical">8dp</dimen>
 </resources>
